--- a/index.html
+++ b/index.html
@@ -2,10 +2,40 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+
 <body>
 	<div class="container">
-		<h3>Hello world</h3>
+	    <div class="row">
+	    	<div class="col-xs-6">
+				<h3>Socket LED!!</h3>
+			</div>
+			<div class="col-xs-6">
+				<form id="form" action="">
+				  <input type="text" id="textInput" />
+				  <input type="range" min="0" max ="100" step="1" />
+				  <button id="submitButton">Submit</button>
+				</form>
+			</div>
+	    </div>	
+	    <div class="row">
+	        <div class="col-xs-4"></div>
+	        <div class="col-xs-4">
+				messages:<ul id="messages"></ul>        	
+	        </div>
+	        <div class="col-xs-4"></div>
+	    </div>	
 	</div>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script>
+	$(function(){
+		alert('hello');
+		$('#submitButton').on('click',function(){
+			alert("button clicked");
+		});
+	});
+	</script>
 </body>
 </html>
