--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<!-- <link rel="stylesheet" type="text/css" href="styles.css"> -->
 </head>
 
 <body>
@@ -13,8 +13,7 @@
 			</div>
 			<div class="col-xs-6">
 				<form id="form" action="">
-				  <input type="text" id="textInput" />
-				  <input type="range" min="0" max ="100" step="1" />
+				  <input id="ledRange" type="range" min="0" max ="100" step="1" />
 				  <button id="submitButton">Submit</button>
 				</form>
 			</div>
@@ -28,12 +27,14 @@
 	    </div>	
 	</div>
 
+	<script src="/socket.io/socket.io.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script>
 	$(function(){
-		alert('hello');
+		var socket = io();
 		$('#submitButton').on('click',function(){
-			alert("button clicked");
+			socket.emit('ledValue', $('#ledRange').val());
+			return false;
 		});
 	});
 	</script>
