--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="col-xs-6">
 				<form id="form" action="">
 				  <input id="ledRange" type="range" min="0" max ="100" step="1" value="1" />
-				  <button id="submitButton">Submit</button>
+				  <button class="btn btn-success" id="submitButton">Submit</button>
 				</form>
 			</div>
 	    </div>	
