--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script>
 	$(function(){
-		var socket = socket = io.connect(window.location.hostname + ':' + 8000);
+		var socket = io.connect(window.location.hostname + ':' + 8000);
 		socket.on('connect',function(data){
 			console.log('connected');
 		});
