--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
 <body>
 	<div class="container">
 	    <div class="row">
-	    	<div class="col-xs-6">
+	    	<div class="col-xs-4"></div>
+	    	<div class="col-xs-4"> 
 				<h3>Socket LED!!</h3>
 			</div>
-			<div class="col-xs-6">
+	    	<div class="col-xs-4"></div>
+		</div>
+		<div class="row">	
+	    	<div class="col-xs-4"></div>
+			<div class="col-xs-4">
 				<form id="form" action="">
 				  <input id="ledRange" type="range" min="0" max ="100" step="1" value="1" />
 				  <button class="btn btn-success" id="submitButton">Submit</button>
 				</form>
-			</div>
+			</div>	
+	    	<div class="col-xs-4"></div>
 	    </div>	
 	    <div class="row">
 	        <div class="col-xs-4"></div>
