--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<!-- <link rel="stylesheet" type="text/css" href="css/styles.css"> -->
+	<style>
+	#sliderDisplay {
+		padding-top: 50px;
+	}
+	</style>
 </head>
 
 <body>
@@ -27,7 +32,7 @@
 	    <div class="row">
 	        <div class="col-xs-4"></div>
 	        <div class="col-xs-4">
-				Slider Values:<ul id="messages"></ul>        	
+				<span id="sliderDisplay">Slider Values:<ul id="messages"></ul></span>        	
 	        </div>
 	        <div class="col-xs-4"></div>
 	    </div>	
