add css styling to output values for disparate viewing box

--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<!-- <link rel="stylesheet" type="text/css" href="css/styles.css"> -->
+	<style>
+	#messages {
+		border: 1px solid green;
+		background-color: yellow;
+
+	}
+	</style>
 </head>
 
 <body>
