add process.stdout to client code to test for ability to receive server-pushed data to local UI

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 		});
 		socket.on('changeColor',function(data){
 			$("#messages").append("<li>"+data+"</li>");
+			console.log("here is data" + data);
 		});
 
 
