add johnny-five hardware connection wrapper around socket.io on client side

--- a/index.html
+++ b/index.html
@@ -44,23 +44,31 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script>
 	$(function(){
-		var socket = io.connect('https://pacific-waters-83081.herokuapp.com/');
-		var slider = document.getElementById('ledRange');
-		
-		socket.on('connect',function(data){
-			console.log('socket.io is connected');
-		});
-		socket.on('changeColor',function(data){
-			$("#messages").append("<li>"+data+"</li>");
-			console.log("here is data" + data);
-		});
+    // need to establish johnny-five connection first, envelope socket
+
+		five.Board().on('ready',function(){
+	        console.log('arduino ready');
+
+			var socket = io.connect('https://pacific-waters-83081.herokuapp.com/');
+
+			var slider = document.getElementById('ledRange');
+			
+			socket.on('connect',function(data){
+				console.log('socket.io is connected');
+			});
+			socket.on('changeColor',function(data){
+				$("#messages").append("<li>"+data+"</li>");
+				console.log("here is data" + data);
+			});
 
 
-		$('#submitButton').on('click',function(){
-			socket.emit('ledValue', $('#ledRange').val());
-			return false;
-		});
-	});
+			$('#submitButton').on('click',function(){
+				socket.emit('ledValue', $('#ledRange').val());
+				return false;
+			});
+	    });
+    });
+
 	</script>
 </body>
 </html>
