move client script code from in-line syntax to external document

--- a/index.html
+++ b/index.html
@@ -42,25 +42,6 @@
 
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script>
-	$(function(){
-		var socket = io.connect('https://pacific-waters-83081.herokuapp.com/');
-		var slider = document.getElementById('ledRange');
-		
-		socket.on('connect',function(data){
-			console.log('socket.io is now connected');
-		});
-		socket.on('changeColor',function(data){
-			$("#messages").append("<li>"+data+"</li>");
-			console.log("here is data" + data);
-		});
-
-
-		$('#submitButton').on('click',function(){
-			socket.emit('ledValue', $('#ledRange').val());
-			return false;
-		});
-	});
-	</script>
+	<script src="clientScript.js"></script>
 </body>
 </html>
