--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
 
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="clientScript.js"></script>
+	<script src="./clientScript.js"></script>
 </body>
 </html>
